fixed section news spacings

--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -316,8 +316,9 @@
 }
 .section_news_title {
   font-size: 4rem;
+  font-weight: 400;
   letter-spacing: 0.2em;
-  line-height: 4.8rem;
+  line-height: 5.8rem;
   width: 20%;
 }
 .section_news_container {
@@ -336,6 +337,8 @@
   content: url("/assets/img/top/section_news_title_logo.png");
   display: inline-block;
   transform: scale(0.5) translateX(-90%) translateY(-30%);
+  top: 10px;
+  left: -15px;
 }
 .section_news_articles_container {
   display: flex;
@@ -343,20 +346,38 @@
   flex: 1;
 }
 .section_news_article {
-  padding-bottom: 30px;
-  font-size: 1.4rem;
+  padding-bottom: 25px;
   border-bottom: solid 1px;
 }
 .section_news_article dt {
   font-family: "Inknut Antiqua";
-  margin-top: 10px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  line-height: 2.8rem;
+  margin-top: 20px;
 }
 .section_news_article dd {
-  margin-top: 20px;
   font-size: 1.4rem;
-  line-height: 2.8rem;
+  font-weight: 400;
   letter-spacing: 0.1em;
+  line-height: 2.8rem;
 }
 .section_news .btn {
   margin-top: 40px;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.2em;
+  line-height: 2.6rem;
+}
+.section_news_container .btn::before{
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 8px;
+  background-image: url("/assets/img/common/arrow_on_btn.png");
+  background-size: contain;
+  vertical-align: middle;
+  position: relative;
+  top: 1px;
 }
